fix: fixed overflow issue on mobile devices

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,7 @@
 @layer base {
   body {
     @apply dark:bg-black dark:text-[#E8E8E8] bg-[#E8E8E8] text-black;
+    overflow-x: hidden;
   }
 }
 
